--- a/gallery.css
+++ b/gallery.css
@@ -4,8 +4,17 @@ body{
 
 .jumbotron{
 	color: #2c3e50;
+	background-color: #ecf0f1;
 }
 
 .navbar-inverse{
 	color: #2c3e50;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+}
+
+.navbar-inverse .navbar-brand{
+	color: #fff;
 }
