--- a/Startup Landing page/app.css
+++ b/Startup Landing page/app.css
@@ -1,3 +1,7 @@
+body{
+	background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
+}
 #content{
 	text-align: center;
+	padding-top: 25%;
 }
