--- a/Startup Landing page/app.css
+++ b/Startup Landing page/app.css
@@ -1,5 +1,8 @@
 body{
 	background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
+	background-size: cover;
+	background-position: center;
+	font-family: Lato;
 }
 #content{
 	text-align: center;
